style: Changed grid column width and added gap in order to fix the width the a tag covers

--- a/src/css/ApiData.css
+++ b/src/css/ApiData.css
@@ -2,10 +2,9 @@
     justify-items: center;
     justify-content: center;
     margin: 20px 0;
-  
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(70px, 230px));
-
+    grid-template-columns: repeat(auto-fit, 200px);
+    gap: 30px;
 }
 
 
@@ -28,18 +27,20 @@
     margin: 50px 0px;
     text-align: center;
 }
+
+
 /* Extra small devices (portrait phones, less than 576px) */
 @media (max-width: 575.98px) {
 
     #posters-container{
-        grid-template-columns: repeat(auto-fit, minmax(70px, 110px));
+        grid-template-columns: repeat(auto-fit, 80px);
     }
 }
 
 /* Small devices (landscape phones, 576px and up) */
 @media (min-width: 576px) and (max-width: 767.98px){
     #posters-container{
-        grid-template-columns: repeat(auto-fit, minmax(70px, 150px));
+        grid-template-columns: repeat(auto-fit, 120px);
     }
 
 }
@@ -47,13 +48,13 @@
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px) and (max-width: 991.98px) {
     #posters-container{
-        grid-template-columns: repeat(auto-fit, minmax(70px, 180px));
+        grid-template-columns: repeat(auto-fit, 160px);
     }
 }
 
 /* Large devices (desktops, 992px and up) */
 @media (min-width: 992px) and (max-width: 1199.98px) {
     #posters-container{
-        grid-template-columns: repeat(auto-fit, minmax(70px, 225px));
+        grid-template-columns: repeat(auto-fit, 200px);
     }
 }
